# coffee

./: .env  Dockerfile  README.txt  docker-compose.yml  pyproject.toml
.github/workflows/: .gitlab-ci.yml
project/: settings.py  urls.py
project/apps/about/: apps.py  urls.py  views.py
project/apps/about/static/main/css/: about.css
project/apps/about/templates/main/: about.html
project/apps/coffee/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
project/apps/coffee/migrations/: 0001_initial.py  0002_alter_coffee_pictures.py
project/apps/coffee/static/coffee/css/: about.css  create.css  info.css  main.css  nicepage.css
project/apps/coffee/templates/coffee/: Contact-us.html  coffee.html  coffee_confirm_delete.html  create_coffee.html  create_feedback.html  info.html  login.html  registration.html  update_coffee.html
project/apps/coffee/tests/: constants.py  factories.py  tests.py
